--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -2,6 +2,7 @@
   height: 100%;
   min-width: 1050px;
   min-height: 400px;
+  overflow: hidden;
 }
 
 .container {
